apps/argocd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/proxy-group: tailscale-ingress-proxy-group
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd
