apps/argocd/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: argocd
  hostnames:
    - argocd.tomerhanochi.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
